- Created a SideNavContainer component. - Removed sidenavcontainer from sidenav component. - Changed dashboardEdit page to use the new SideNavContainer component - Created dashboardCard component and SCSS files

--- a/client/src/App.scss
+++ b/client/src/App.scss
@@ -31,3 +31,7 @@
 
 // Popup
 @import "scss/components/card";
+
+// Dashboard
+@import "scss/components/dashboard/dashboardCard";
+@import "scss/components/dashboard/dashboardGrid";
