made the grid work! - Now saves to database and gets data from the base

--- a/client/src/scss/components/gridItems/_photo.scss
+++ b/client/src/scss/components/gridItems/_photo.scss
@@ -1,8 +1,8 @@
 .photo {
   background: url("https://fontys.nl/upload_mm/e/1/6/115115_fullimage_fon525_00.png");
   background-size: contain;
+  background-position: center;
   background-repeat: no-repeat;
   width: 100%;
   height: 100%;
-  z-index: 999;
 }
