--- a/client/src/scss/base/_globals.scss
+++ b/client/src/scss/base/_globals.scss
@@ -2,3 +2,14 @@
   display: flex;
   justify-content: center !important;
 }
+
+.flex-center-center {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.max-width-height {
+  width: 100%;
+  height: 100vh;
+}
