--- a/client/src/scss/components/bars/_sideNav.scss
+++ b/client/src/scss/components/bars/_sideNav.scss
@@ -5,8 +5,7 @@
   width: 325px;
   background-color: $color-white;
   height: 100vh;
-  padding: 56px 0 0 15px;
-
+  padding: 56px 15px 0 15px;
   .btn {
     margin-top: 20px;
   }
