Dashboard card finished

--- a/client/src/App.scss
+++ b/client/src/App.scss
@@ -34,4 +34,5 @@
 
 // Dashboard
 @import "scss/components/dashboard/dashboardCard";
+@import "scss/components/dashboard/dashboardCardHolder";
 @import "scss/components/dashboard/dashboardGrid";
