--- a/client/src/scss/components/dashboard/_dashboardGrid.scss
+++ b/client/src/scss/components/dashboard/_dashboardGrid.scss
@@ -7,5 +7,11 @@
   .dashboardGrid {
     grid-area: dashboard;
     padding: 0 30px;
+
+    h2 {
+      padding: 10px 0 5px;
+      font-size: 20px;
+      color: $color-grey;
+    }
   }
 }
