--- a/client/src/scss/components/dashboard/_dashboardCard.scss
+++ b/client/src/scss/components/dashboard/_dashboardCard.scss
@@ -7,7 +7,7 @@
 
   flex-grow: 0;
   flex-shrink: 0;
-  flex-basis: 32%;
+  flex-basis: calc(33% - 20px);
 
   @include border-radius(15px);
   @include shadow($shadow-1);
