created new API route for companies&dashboards

--- a/client/src/App.scss
+++ b/client/src/App.scss
@@ -9,6 +9,7 @@
 @import "scss/base/globals";
 @import "scss/base/inputs";
 @import "scss/base/list";
+@import "scss/base/loader";
 @import "scss/base/reset";
 @import "scss/base/shadows";
 @import "scss/base/typography";
