--- a/client/src/scss/base/_loader.scss
+++ b/client/src/scss/base/_loader.scss
@@ -1,31 +1,45 @@
-.lds-ring {
+.loader-center {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.loader-center-vh {
+  width: 100%;
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.lds-dual-ring {
   display: inline-block;
   position: relative;
-  width: 64px;
-  height: 64px;
+  width: 96px;
+  height: 96px;
+
+  .logo {
+    position: absolute;
+    width: 48px;
+    height: 48px;
+    margin: 24px;
+    background-image: url("img/favicon.ico");
+    background-position: center;
+    background-size: contain;
+  }
 }
-.lds-ring div {
-  box-sizing: border-box;
+.lds-dual-ring:after {
+  content: " ";
   display: block;
-  position: absolute;
-  width: 51px;
-  height: 51px;
-  margin: 6px;
-  border: 6px solid #fdd;
+  width: 92px;
+  height: 92px;
+  margin: 2px;
   border-radius: 50%;
-  animation: lds-ring 1.2s cubic-bezier(0.5, 0, 0.5, 1) infinite;
-  border-color: #fdd transparent transparent transparent;
+  border: 5px solid $color-red;
+  border-color: $color-red transparent $color-red transparent;
+  animation: lds-dual-ring 1.2s linear infinite;
 }
-.lds-ring div:nth-child(1) {
-  animation-delay: -0.45s;
-}
-.lds-ring div:nth-child(2) {
-  animation-delay: -0.3s;
-}
-.lds-ring div:nth-child(3) {
-  animation-delay: -0.15s;
-}
-@keyframes lds-ring {
+@keyframes lds-dual-ring {
   0% {
     transform: rotate(0deg);
   }
