Made dashboard name+handle editable with updating to database. cleaned up code by splitting scss and making components.

--- a/client/src/App.scss
+++ b/client/src/App.scss
@@ -30,5 +30,9 @@
 @import "scss/components/user/dashboardEdit";
 @import "scss/components/user/login";
 
+//      /scss/components/dashboardEdit
+@import "scss/components/dashboardEdit/editDashboardTitle";
+@import "scss/components/dashboardEdit/widgetSelecter";
+
 //      /scss/components
 @import "scss/components/card";
