--- a/client/src/scss/abstracts/_variables.scss
+++ b/client/src/scss/abstracts/_variables.scss
@@ -3,6 +3,7 @@
 // EG: colors start with color-, font styles start with font-
 // Colors
 $color-white: rgb(255, 255, 255);
+$color-dark-white: rgb(185, 185, 185);
 $color-light-grey: rgb(244, 245, 245);
 $color-grey: rgb(112, 112, 112);
 $color-grey-transparent-50: rgba(112, 112, 112, 0.5);
