--- a/client/src/scss/base/_buttons.scss
+++ b/client/src/scss/base/_buttons.scss
@@ -82,4 +82,15 @@
 
 .backButton {
   margin: 50px 0 0 50px;
+  width: fit-content;
+}
+
+.dashboardEdit {
+  .mainContainer {
+    .sideNav {
+      .backButton {
+        margin: 0;
+      }
+    }
+  }
 }
