--- a/client/src/scss/base/_inputs.scss
+++ b/client/src/scss/base/_inputs.scss
@@ -1,5 +1,6 @@
 input[type="text"],
-input[type="password"] {
+input[type="password"],
+input[type="email"] {
   width: 90%;
   background: transparent;
   border: 0;
