--- a/client/src/scss/components/user/_dashboardEdit.scss
+++ b/client/src/scss/components/user/_dashboardEdit.scss
@@ -6,6 +6,7 @@
     grid-template-columns: 325px auto;
     grid-template-rows: 100vh;
     grid-template-areas: "sideBar dashboard";
+    padding-top:56px;
     .Select-control {
       border-radius: 0px !important;
       border: none !important;
