admin role problem fixed!

--- a/client/src/App.scss
+++ b/client/src/App.scss
@@ -43,3 +43,5 @@
 @import "scss/components/dashboardEdit/editDashboardTitle";
 @import "scss/components/dashboardEdit/widgetSelecter";
 
+// Snaccbar
+@import "scss/components/snackbar/snackbar";
