--- a/client/src/App.scss
+++ b/client/src/App.scss
@@ -19,6 +19,7 @@
 @import "scss/components/bars/sideNav";
 @import "scss/components/bars/titleBar";
 @import "scss/components/bars/titleBarDropdown";
+@import "scss/components/bars/snackbar";
 
 //      /scss/components/gridItems
 @import "scss/components/gridItems/clock";
