--- a/client/src/scss/components/_card.scss
+++ b/client/src/scss/components/_card.scss
@@ -17,7 +17,7 @@
     background-color: $color-white;
     z-index: 0;
     border-radius: 10px;
-    min-width: 300px;
+    min-width: 420px;
     @include shadow($shadow-2);
 
     .cardHeader {
@@ -41,7 +41,7 @@
 
       border-radius: 10px 10px 0px 0px;
 
-      h1 {
+      h2 {
         color: $color-white;
         z-index: 3;
       }
@@ -124,13 +124,13 @@
 
   /* Track */
   &::-webkit-scrollbar-track {
-    box-shadow: inset 0 0 2px grey;
+    box-shadow: inset 0 0 2px rgb(95, 95, 95);
     border-radius: 10px;
   }
 
   /* Handle */
   &::-webkit-scrollbar-thumb {
-    background: red;
+    background: $color-red;
     border-radius: 10px;
   }
 
