--- a/client/src/scss/components/user/_adminProfile.scss
+++ b/client/src/scss/components/user/_adminProfile.scss
@@ -19,9 +19,13 @@
         border-radius: 50%;
       }
       .info {
-        padding-left: 30px;
-        align-self: flex-start;
-        color: $color-black;
+        margin-left: 30px;
+        h2 {
+          color: $color-black;
+        }
+        h5 {
+          color: $color-grey;
+        }
       }
     }
     .adminForm {
