--- a/client/src/scss/components/dashboardEdit/_widgetSelecter.scss
+++ b/client/src/scss/components/dashboardEdit/_widgetSelecter.scss
@@ -2,9 +2,8 @@
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  background-color: none;
-  margin: 30px 0;
-  height: calc(100vh - 380px);
+  margin-top: 30px;
+  height: calc(100vh - 360px);
   .widgetAdd {
     display: flex;
     flex-direction: column;
