updated some stuff - modified some components and deleted some

--- a/client/src/scss/base/_typography.scss
+++ b/client/src/scss/base/_typography.scss
@@ -2,6 +2,8 @@
 @import url("https://fonts.googleapis.com/css?family=Montserrat:500,700");
 // Import material icons
 @import url("https://fonts.googleapis.com/icon?family=Material+Icons");
+// Import weather icons
+@import url("https://cdnjs.cloudflare.com/ajax/libs/weather-icons/2.0.9/css/weather-icons.min.css");
 h1,
 h2,
 h3,
@@ -41,3 +43,4 @@ a,
 li {
   font-weight: medium;
 }
+
