fixed scrollbar on dashboard view

--- a/client/src/scss/base/_globals.scss
+++ b/client/src/scss/base/_globals.scss
@@ -2,6 +2,12 @@ body {
   overflow-y: hidden;
 }
 
+.page {
+  height: 100vh;
+  position: relative;
+  overflow-y: auto;
+}
+
 * {
   font-family: $font;
   /* width */
