--- a/client/src/App.scss
+++ b/client/src/App.scss
@@ -2,6 +2,7 @@
 @import "scss/abstracts/functions";
 @import "scss/abstracts/mixins";
 @import "scss/abstracts/variables";
+@import "scss/abstracts/icons";
 
 //      /scss/base
 @import "scss/base/buttons";
