--- a/client/src/scss/components/dashboardEdit/_editDashboardTitle.scss
+++ b/client/src/scss/components/dashboardEdit/_editDashboardTitle.scss
@@ -2,7 +2,7 @@
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  margin: 20px 0;
+  margin: 0 0 20px 0;
   i {
     color: $color-dark-white;
     cursor: pointer;
