updated company deletion & made progress on dashboard editing names and handles

--- a/client/src/scss/base/_inputs.scss
+++ b/client/src/scss/base/_inputs.scss
@@ -12,6 +12,7 @@ input[type="email"] {
   }
   &.dashboardEdit {
     border-bottom: none;
+    height: 24px;
     &::placeholder {
       color: $color-grey;
     }
