--- a/client/src/scss/components/dashboardEdit/_editDashboardTitle.scss
+++ b/client/src/scss/components/dashboardEdit/_editDashboardTitle.scss
@@ -14,5 +14,50 @@
     h5 {
       margin: 0;
     }
+    div {
+      position: relative;
+      height: 25px;
+      margin-top: 5px;
+      margin-bottom: 15px;
+    }
+    input {
+      width: 100%;
+      height: 25px;
+      border-bottom: 2px solid transparent;
+    }
+    input:focus {
+      border-bottom: 2px solid $color-red-transparent;
+    }
+    i {
+      position: absolute;
+      right: 0;
+      top: 0;
+      font-size: 1.2em;
+    }
+  }
+  .dashboardHandle {
+    h5 {
+      margin: 0;
+    }
+    div {
+      position: relative;
+      height: 25px;
+      margin-top: 5px;
+      margin-bottom: 15px;
+    }
+    input {
+      width: 100%;
+      height: 25px;
+      border-bottom: 2px solid transparent;
+    }
+    input:focus {
+      border-bottom: 2px solid $color-red-transparent;
+    }
+    i {
+      position: absolute;
+      right: 0;
+      top: 0;
+      font-size: 1.2em;
+    }
   }
 }
