fixed dashboardCard started on companyNameEdit

--- a/client/src/App.scss
+++ b/client/src/App.scss
@@ -23,6 +23,7 @@
 @import "scss/components/bars/titleBarDropdown";
 
 //      /scss/components/dashboard
+@import "scss/components/dashboard/dashboard";
 @import "scss/components/dashboard/dashboardCard";
 @import "scss/components/dashboard/dashboardCardHolder";
 @import "scss/components/dashboard/dashboardGrid";
